fix:26.02.2024 14:19 methods getAllAnswers, getAnswersByUserId, getAnswersByQuestionId and getAnswerById were changed.